--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server": "^2.0.0-rc.6",
-    "graphql": "^0.13.2"
+    "chalk": "^2.4.1",
+    "graphql": "^0.13.2",
+    "lodash.merge": "^4.6.1"
   }
 }
